[package]
name = "do-notation"
version = "0.1.1"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Monadic do syntactic sugar"
keywords = ["monad", "do"]
categories = ["data-structures"]
homepage = "https://github.com/phaazon/do-notation"
repository = "https://github.com/phaazon/do-notation"
documentation = "https://docs.rs/do-notation"
readme = "README.md"
edition = "2018"
